; ModuleID = '/home/carl/AnghaBench/postgres/src/interfaces/ecpg/compatlib/extr_informix.c_dectoasc.c'
source_filename = "/home/carl/AnghaBench/postgres/src/interfaces/ecpg/compatlib/extr_informix.c_dectoasc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32 }

@CSTRINGTYPE = common dso_local global i32 0, align 4
@CDECIMALTYPE = common dso_local global i32 0, align 4
@ECPG_INFORMIX_OUT_OF_MEMORY = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @dectoasc(i32* %0, i8* %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  %11 = alloca %struct.TYPE_6__*, align 8
  store i32* %0, i32** %6, align 8
  store i8* %1, i8** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  %12 = load i32, i32* @CSTRINGTYPE, align 4
  %13 = load i8*, i8** %7, align 8
  %14 = call i32 @rsetnull(i32 %12, i8* %13)
  %15 = load i32, i32* @CDECIMALTYPE, align 4
  %16 = load i32*, i32** %6, align 8
  %17 = bitcast i32* %16 to i8*
  %18 = call i64 @risnull(i32 %15, i8* %17)
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %21

20:                                               ; preds = %4
  store i32 0, i32* %5, align 4
  br label %79

21:                                               ; preds = %4
  %22 = call %struct.TYPE_6__* (...) @PGTYPESnumeric_new()
  store %struct.TYPE_6__* %22, %struct.TYPE_6__** %11, align 8
  %23 = load %struct.TYPE_6__*, %struct.TYPE_6__** %11, align 8
  %24 = icmp eq %struct.TYPE_6__* %23, null
  br i1 %24, label %25, label %27

25:                                               ; preds = %21
  %26 = load i32, i32* @ECPG_INFORMIX_OUT_OF_MEMORY, align 4
  store i32 %26, i32* %5, align 4
  br label %79

27:                                               ; preds = %21
  %28 = load i32*, i32** %6, align 8
  %29 = load %struct.TYPE_6__*, %struct.TYPE_6__** %11, align 8
  %30 = call i64 @PGTYPESnumeric_from_decimal(i32* %28, %struct.TYPE_6__* %29)
  %31 = icmp ne i64 %30, 0
  br i1 %31, label %32, label %36

32:                                               ; preds = %27
  %33 = load %struct.TYPE_6__*, %struct.TYPE_6__** %11, align 8
  %34 = call i32 @PGTYPESnumeric_free(%struct.TYPE_6__* %33)
  %35 = load i32, i32* @ECPG_INFORMIX_OUT_OF_MEMORY, align 4
  store i32 %35, i32* %5, align 4
  br label %79

36:                                               ; preds = %27
  %37 = load i32, i32* %9, align 4
  %38 = icmp sge i32 %37, 0
  br i1 %38, label %39, label %43

39:                                               ; preds = %36
  %40 = load %struct.TYPE_6__*, %struct.TYPE_6__** %11, align 8
  %41 = load i32, i32* %9, align 4
  %42 = call i8* @PGTYPESnumeric_to_asc(%struct.TYPE_6__* %40, i32 %41)
  store i8* %42, i8** %10, align 8
  br label %49

43:                                               ; preds = %36
  %44 = load %struct.TYPE_6__*, %struct.TYPE_6__** %11, align 8
  %45 = load %struct.TYPE_6__*, %struct.TYPE_6__** %11, align 8
  %46 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %45, i32 0, i32 0
  %47 = load i32, i32* %46, align 4
  %48 = call i8* @PGTYPESnumeric_to_asc(%struct.TYPE_6__* %44, i32 %47)
  store i8* %48, i8** %10, align 8
  br label %49

49:                                               ; preds = %43, %39
  %50 = load %struct.TYPE_6__*, %struct.TYPE_6__** %11, align 8
  %51 = call i32 @PGTYPESnumeric_free(%struct.TYPE_6__* %50)
  %52 = load i8*, i8** %10, align 8
  %53 = icmp ne i8* %52, null
  br i1 %53, label %55, label %54

54:                                               ; preds = %49
  store i32 -1, i32* %5, align 4
  br label %79

55:                                               ; preds = %49
  %56 = load i8*, i8** %10, align 8
  %57 = call i64 @strlen(i8* %56)
  %58 = add nsw i64 %57, 1
  %59 = trunc i64 %58 to i32
  %60 = load i32, i32* %8, align 4
  %61 = icmp sgt i32 %59, %60
  br i1 %61, label %62, label %73

62:                                               ; preds = %55
  %63 = load i32, i32* %8, align 4
  %64 = icmp sgt i32 %63, 1
  br i1 %64, label %65, label %70

65:                                               ; preds = %62
  %66 = load i8*, i8** %7, align 8
  %67 = getelementptr inbounds i8, i8* %66, i64 0
  store i8 42, i8* %67, align 1
  %68 = load i8*, i8** %7, align 8
  %69 = getelementptr inbounds i8, i8* %68, i64 1
  store i8 0, i8* %69, align 1
  br label %70

70:                                               ; preds = %65, %62
  %71 = load i8*, i8** %10, align 8
  %72 = call i32 @free(i8* %71)
  store i32 -1, i32* %5, align 4
  br label %79

73:                                               ; preds = %55
  %74 = load i8*, i8** %7, align 8
  %75 = load i8*, i8** %10, align 8
  %76 = call i32 @strcpy(i8* %74, i8* %75)
  %77 = load i8*, i8** %10, align 8
  %78 = call i32 @free(i8* %77)
  store i32 0, i32* %5, align 4
  br label %79

79:                                               ; preds = %73, %70, %54, %32, %25, %20
  %80 = load i32, i32* %5, align 4
  ret i32 %80
}

declare dso_local i32 @rsetnull(i32, i8*) #1

declare dso_local i64 @risnull(i32, i8*) #1

declare dso_local %struct.TYPE_6__* @PGTYPESnumeric_new(...) #1

declare dso_local i64 @PGTYPESnumeric_from_decimal(i32*, %struct.TYPE_6__*) #1

declare dso_local i32 @PGTYPESnumeric_free(%struct.TYPE_6__*) #1

declare dso_local i8* @PGTYPESnumeric_to_asc(%struct.TYPE_6__*, i32) #1

declare dso_local i64 @strlen(i8*) #1

declare dso_local i32 @free(i8*) #1

declare dso_local i32 @strcpy(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
